--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    создал репозиторий
+    <div class="top">
+<header class="header center">
+    <h1 class="header__title">Добро пожаловать <br> на мой сайт !</h1>
+    <p class="header__text">Вам предстоит пройти несколько увлекательных<br>игр. Если готов нажимай поехали и приступай</p>
+    <button class="header__button">Поехали</button>
+</header>
+<div class="games">
+    <section class="box center">
+        <a href="#">
+            <div class="box__1">
+                <img class="box__img" src="img/g1.jpeg" alt="game 1">
+                <div class="box__text">Игра 1</div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box__1">
+                <img class="box__img" src="img/g2.jpeg" alt="game 2">
+                <div class="box__text">Игра 2</div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="box__1">
+                <img class="box__img" src="img/g3.jpeg" alt="game 3">
+                <div class="box__text">Игра 3</div>
+            </div>
+        </a>
+    </section>
+</div>
+</div>
 </body>
 </html>
