--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
 </head>
 
 <body>
-    <div class="top">
-<header class="header center">
-    <h1 class="header__title">Добро пожаловать <br> на мой сайт !</h1>
-    <p class="header__text">Вам предстоит пройти несколько увлекательных<br>игр. Если готов нажимай поехали и приступай</p>
-    <button class="header__button">Поехали</button>
-</header>
-<div class="games">
-    <section class="box center">
-        <a href="#">
-            <div class="box__1">
-                <img class="box__img" src="img/g1.jpeg" alt="game 1">
-                <div class="box__text">Игра 1</div>
+    <div class="main">
+        <div class="container">
+            <div class="main-content">
+                <h1>Добро пожаловать <br />на мой сайт !</h1>
+
+                <p class="main-content-description">
+                    Вам предстоит пройти несколько увлекательных<br />игр. Если готов нажимай <span
+                        class="highlightText">поехали</span> и <span class="highlightText">приступай</span>
+                </p>
+
+                <button>Поехали!</button>
             </div>
-        </a>
-        <a href="#">
-            <div class="box__1">
-                <img class="box__img" src="img/g2.jpeg" alt="game 2">
-                <div class="box__text">Игра 2</div>
+        </div>
+    </div>
+
+    <div class="games">
+        <div class="container">
+            <div class="games-list">
+                <a href="#" class="games-list-item games-list-item-1">
+                    <h5 class="games-list-item-text">Игра 1</h5>
+                </a>
+                <a href="#" class="games-list-item games-list-item-2">
+                    <h5 class="games-list-item-text">Игра 1</h5>
+                </a>
+                <a href="#" class="games-list-item games-list-item-3">
+                    <h5 class="games-list-item-text">Игра 1</h5>
+                </a>
             </div>
-        </a>
-        <a href="#">
-            <div class="box__1">
-                <img class="box__img" src="img/g3.jpeg" alt="game 3">
-                <div class="box__text">Игра 3</div>
-            </div>
-        </a>
-    </section>
-</div>
-</div>
+        </div>
+    </div>
 </body>
 </html>
