--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <h1>Добро пожаловать <br />на мой сайт !</h1>
 
                 <p class="main-content-description">
-                    Вам предстоит пройти несколько увлекательных<br />игр. Если готов нажимай <span
-                        class="highlightText">поехали</span> и <span class="highlightText">приступай</span>
+                    Вам предстоит пройти несколько увлекательных<br class="desktop" />игр. Если готов нажимай <b>поехали</b>&nbsp;и&nbsp;<b>приступай</b>
                 </p>
 
                 <button>Поехали!</button>
@@ -44,5 +43,6 @@
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
