--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="hw-2-3.js"></script>
 </body>
 </html>
