--- a/index.html
+++ b/index.html
@@ -43,6 +43,66 @@
             </div>
         </div>
     </div>
-    <script src="hw-2-4.js"></script>
+
+    <div class="seasons">
+        <div class="container">
+            <div class="seasons-content">
+                <div class="seasons-content-item">
+                    <h2>Времена года!</h2>
+
+                    <p class="seasons-content-item-description">Нажмите кнопку играть, введите номер месяца (от 1 до 12)
+                        и вы узнаете к какому времени года он
+                        относится</p>
+
+                    <button onclick="monthNumbers ();">Играть!</button>
+                </div>
+
+                <div class="seasons-content-item seasons-content-item-image">
+                    <img src="./img/seasons.png" />
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="rememberWords">
+        <div class="container">
+            <div class="rememberWords-content">
+                <div class="rememberWords-content-item rememberWords-content-item-image">
+                    <img src="./img/rememberWords.png" />
+                </div>
+
+                <div class="rememberWords-content-item">
+                    <h2>Запомни слова </h2>
+
+                    <p class="rememberWords-content-item-description">При нажатии на кнопку играть, вы увидите несколько
+                        слов,<br />которые вам необходимо запомнить.</p>
+
+                    <button>Играть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="riddleGame">
+        <div class="container">
+            <div class="riddleGame-content">
+                <h2>Игра в загадки</h2>
+
+                <p class="riddleGame-content-description">Компьютер загадывает загадку, вам необходимо ее угадать, если
+                    вы дадите не правильный ответ, то
+                    компьютер даст вам подсказку. У вас будет три попытки и две подсказки.</p>
+
+                <button>Играть!</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        Все права защищены
+    </footer>
+
+
+    <script src="hw-2-5.js"></script>
 </body>
 </html>
