--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="game.js" ></script>
 </head>
 
 <body>
@@ -103,6 +104,7 @@
     </footer>
 
 
-    <script src="hw-2-6.js"></script>
+    <script src="hw-2-5.js"></script>
+    
 </body>
 </html>
