--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="game.js" ></script>
+    <!-- <script src="game.js" ></script> -->
 </head>
 
 <body>
@@ -104,7 +104,7 @@
     </footer>
 
 
-    <script src="hw-2-7.js"></script>
+    <script src="hw-2.8.js"></script>
     
 </body>
 </html>
