Исправил очередной раз

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="hw-2-5.js"></script>
 </head>
 
 <body>
@@ -54,7 +55,7 @@
                         и вы узнаете к какому времени года он
                         относится</p>
 
-                    <button onclick="monthNumbers ();">Играть!</button>
+                    <button onclick="monthNumbers ()">Играть!</button>
                 </div>
 
                 <div class="seasons-content-item seasons-content-item-image">
@@ -103,6 +104,6 @@
     </footer>
 
 
-    <script src="hw-2-5.js"></script>
+    
 </body>
 </html>
