--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 
                     <button onclick="monthNumbers ()">Играть!</button>
                 </div>
-
-                
                 <div class="seasons-content-item seasons-content-item-image">
                     <img src="./img/seasons.png" />
                 </div>
@@ -66,7 +64,7 @@
 
         </div>
     </div>
-
+<!-- jgfjfgj -->
     <div class="rememberWords">
         <div class="container">
             <div class="rememberWords-content">
